--- a/AndroidStudioProjects/ExerciciRecopilatori/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/ExerciciRecopilatori/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ExerciciRecopilatori</string>
+    <string name="app_name">Transports Express</string>
 </resources>
