--- a/AndroidStudioProjects/LoginApp/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/LoginApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LoginApp</string>
+    <string name="title_activity_nou_usuari">NouUsuari</string>
 </resources>
