--- a/AndroidStudioProjects/Projecte_PMM/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/Projecte_PMM/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_activity_dbhelper">DBHelper</string>
     <string name="title_activity_registre">Registre</string>
     <string name="title_activity_info">info</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
